chore: gradient flared cards, and fix spacing issues and layout in dashboard, spacings

--- a/StreamlineAcademyWebApp/Sl-Academy-App/src/assets/css/style.css
+++ b/StreamlineAcademyWebApp/Sl-Academy-App/src/assets/css/style.css
@@ -12364,7 +12364,6 @@ span.select2-selection.select2-selection--single:focus {
   border: 1px solid var(--gray-color);
   border-radius: 20px;
   padding: 40px;
-  margin-left: 95px;
   /* Large devices */
 }
 
